Modify code for Multiple Language

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,8 +1,22 @@
-#switch-en=Passer à l'anglais
-#switch-fr=Passer au français
-#switch-hi=Passer à l'hindi
-#switch-bn=Passer au bengali
-#switch-nl=Passer au néerlandais
+switch-en=Passer à l'anglais
+switch-fr=Passer au français
+switch-hi=Passer à l'hindi
+switch-bn=Passer au bengali
+switch-nl=Passer au néerlandais
+app.currency=Application de conversion de devises
+label.fromCurrency=De la devise :
+label.toCurrency=À la devise :
+label.amount=Montant :
+label.date=Date :
+button.convert=Convertir
+div.result=Résultat de la conversion :
+error.invalidInput=Saisie invalide. Veuillez fournir des valeurs valides.
+error.invalidConversionRequest=Demande de conversion invalide. Veuillez vérifier votre saisie.
+error.currencyNotFound=Devise non trouvée.
+error.requestFailed=Demande échouée : {0} - {1}
+error.requestError=Erreur lors de la demande : {0}
+
+## messages_fr.properties
 #app.currency=Application de conversion de devises
 #label.fromCurrency=De la devise :
 #label.toCurrency=À la devise :
@@ -15,22 +29,8 @@
 #error.currencyNotFound=Devise non trouvée.
 #error.requestFailed=Demande échouée : {0} - {1}
 #error.requestError=Erreur lors de la demande : {0}
-
-# messages_fr.properties
-app.currency=Application de conversion de devises
-label.fromCurrency=De la devise :
-label.toCurrency=À la devise :
-label.amount=Montant :
-label.date=Date :
-button.convert=Convertir
-label.result=Résultat de la conversion :
-error.invalidInput=Saisie invalide. Veuillez fournir des valeurs valides.
-error.invalidConversionRequest=Demande de conversion invalide. Veuillez vérifier votre saisie.
-error.currencyNotFound=Devise non trouvée.
-error.requestFailed=Demande échouée : {0} - {1}
-error.requestError=Erreur lors de la demande : {0}
-switch-en=Passer en anglais
-switch-fr=Passer en français
-switch-nl=Passer en néerlandais
-switch-it=Passer en italien
+#switch-en=Passer en anglais
+#switch-fr=Passer en français
+#switch-nl=Passer en néerlandais
+#switch-it=Passer en italien
 
