--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,22 +1,8 @@
-#switch-en=Switch to English
-#switch-fr=Switch to French
-#switch-hi=Switch to Hindi
-#switch-bn=Switch to Bangali
-#switch-nl=Switch to Dutch
-#app.currency=Currency Converter App
-#label.fromCurrency=From Currency:
-#label.toCurrency=To Currency:
-#label.amount=Amount:
-#label.date=Date:
-#button.convert=Convert
-#label.result=Conversion Result:
-#error.invalidInput=Invalid input. Please provide valid values.
-#error.invalidConversionRequest=Invalid conversion request. Please check your input.
-#error.currencyNotFound=Currency not found.
-#error.requestFailed=Request failed: {0} - {1}
-#error.requestError=Error while making the request: {0}
-
-# messages.properties
+switch-en=Switch to English
+switch-fr=Switch to French
+switch-hi=Switch to Hindi
+switch-bn=Switch to Bangali
+switch-nl=Switch to Dutch
 app.currency=Currency Converter App
 label.fromCurrency=From Currency:
 label.toCurrency=To Currency:
@@ -29,8 +15,22 @@ error.invalidConversionRequest=Invalid conversion request. Please check your inp
 error.currencyNotFound=Currency not found.
 error.requestFailed=Request failed: {0} - {1}
 error.requestError=Error while making the request: {0}
-switch-en=Switch to English
-switch-fr=Switch to French
-switch-nl=Switch to Dutch
-switch-it=Switch to Italian
+
+## messages.properties
+#app.currency=Currency Converter App
+#label.fromCurrency=From Currency:
+#label.toCurrency=To Currency:
+#label.amount=Amount:
+#label.date=Date:
+#button.convert=Convert
+#label.result=Conversion Result:
+#error.invalidInput=Invalid input. Please provide valid values.
+#error.invalidConversionRequest=Invalid conversion request. Please check your input.
+#error.currencyNotFound=Currency not found.
+#error.requestFailed=Request failed: {0} - {1}
+#error.requestError=Error while making the request: {0}
+#switch-en=Switch to English
+#switch-fr=Switch to French
+#switch-nl=Switch to Dutch
+#switch-it=Switch to Italian
 
