Updated language changes in project

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -3,7 +3,9 @@ switch-fr=Passer au français
 switch-hi=Passer à l'hindi
 switch-bn=Passer au bengali
 switch-nl=Passer au néerlandais
+switch-it=Passer en italien
 app.currency=Application de conversion de devises
+label.language=Langue
 label.fromCurrency=De la devise :
 label.toCurrency=À la devise :
 label.amount=Montant :
