--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -3,7 +3,9 @@ switch-fr=Cambia in francese
 switch-hi=Cambia in hindi
 switch-bn=Cambia in bengalese
 switch-nl=Cambia in olandese
+switch-it=Cambia in italiano
 app.currency=App Convertitore di Valuta
+label.language=Lingua
 label.fromCurrency=Da valuta:
 label.toCurrency=A valuta:
 label.amount=Importo:
