--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -3,7 +3,9 @@ switch-fr=Omschakelen naar Frans
 switch-hi=Omschakelen naar Hindi
 switch-bn=Omschakelen naar Bengaals
 switch-nl=Omschakelen naar Nederlands
+switch-it=Schakelen naar het Italiaans
 app.currency=Valutawisselapp
+label.language=Taal
 label.fromCurrency=Van valuta:
 label.toCurrency=Naar valuta:
 label.amount=Bedrag:
