--- a/src/main/resources/messages_hi.properties
+++ b/src/main/resources/messages_hi.properties
@@ -1,16 +1,19 @@
-switch-en=????????? ?? ????? ????
-switch-fr=?????? ?? ????? ????
-switch-hi=????? ?? ????? ????
-switch-bn=?????? ?? ????? ????
-switch-nl=?? ?? ????? ????
-app.currency=?????? ??????? ??
-label.fromCurrency=?? ??????:
-label.toCurrency=?? ??????:
-label.amount=????:
-label.date=?????:
-button.convert=?????? ????
-label.result=??????? ??????:
-error.invalidInput=?????? ?????? ????? ????? ????? ?????? ?????
-error.invalidConversionRequest=?????? ??????? ??????? ????? ???? ????? ?? ???? ?????
-error.currencyNotFound=?????? ???? ?????
-error.requestFailed=
+#switch-en=Switch to English
+#switch-fr=Switch to French
+#switch-hi=Switch to Hindi
+#switch-bn=Switch to Bangali
+#switch-nl=Switch to Dutch
+#switch-it=Switch to Italian
+#app.currency=Currency Converter App
+#label.language=Language
+#label.fromCurrency=From Currency:
+#label.toCurrency=To Currency:
+#label.amount=Amount:
+#label.date=Date:
+#button.convert=Convert
+#label.result=Conversion Result:
+#error.invalidInput=Invalid input. Please provide valid values.
+#error.invalidConversionRequest=Invalid conversion request. Please check your input.
+#error.currencyNotFound=Currency not found.
+#error.requestFailed=Request failed: {0} - {1}
+#error.requestError=Error while making the request: {0}
