All application done

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,7 @@ switch-hi=Switch to Hindi
 switch-bn=Switch to Bangali
 switch-nl=Switch to Dutch
 switch-it=Switch to Italian
+switch-ch=Switch to Cheniease
 app.currency=Currency Converter App
 label.language=Language
 label.fromCurrency=From Currency:
