updated code in master

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,6 @@
 switch-en=Switch to English
 switch-fr=Switch to French
-switch-hi=Switch to Hindi
+switch-hi=Select
 switch-bn=Switch to Bangali
 switch-nl=Switch to Dutch
 switch-it=Switch to Italian
