--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,38 +1,38 @@
-switch-en=Passer à l'anglais
-switch-fr=Passer au français
-switch-hi=Passer à l'hindi
+switch-en=Passer ï¿½ l'anglais
+switch-fr=Passer au franï¿½ais
+switch-hi=SÃ©lectionner
 switch-bn=Passer au bengali
-switch-nl=Passer au néerlandais
+switch-nl=Passer au nï¿½erlandais
 switch-it=Passer en italien
 app.currency=Application de conversion de devises
 label.language=Langue
 label.fromCurrency=De la devise :
-label.toCurrency=À la devise :
+label.toCurrency=ï¿½ la devise :
 label.amount=Montant :
 label.date=Date :
 button.convert=Convertir
-div.result=Résultat de la conversion :
+div.result=Rï¿½sultat de la conversion :
 error.invalidInput=Saisie invalide. Veuillez fournir des valeurs valides.
-error.invalidConversionRequest=Demande de conversion invalide. Veuillez vérifier votre saisie.
-error.currencyNotFound=Devise non trouvée.
-error.requestFailed=Demande échouée : {0} - {1}
+error.invalidConversionRequest=Demande de conversion invalide. Veuillez vï¿½rifier votre saisie.
+error.currencyNotFound=Devise non trouvï¿½e.
+error.requestFailed=Demande ï¿½chouï¿½e : {0} - {1}
 error.requestError=Erreur lors de la demande : {0}
 
 ## messages_fr.properties
 #app.currency=Application de conversion de devises
 #label.fromCurrency=De la devise :
-#label.toCurrency=À la devise :
+#label.toCurrency=ï¿½ la devise :
 #label.amount=Montant :
 #label.date=Date :
 #button.convert=Convertir
-#label.result=Résultat de la conversion :
+#label.result=Rï¿½sultat de la conversion :
 #error.invalidInput=Saisie invalide. Veuillez fournir des valeurs valides.
-#error.invalidConversionRequest=Demande de conversion invalide. Veuillez vérifier votre saisie.
-#error.currencyNotFound=Devise non trouvée.
-#error.requestFailed=Demande échouée : {0} - {1}
+#error.invalidConversionRequest=Demande de conversion invalide. Veuillez vï¿½rifier votre saisie.
+#error.currencyNotFound=Devise non trouvï¿½e.
+#error.requestFailed=Demande ï¿½chouï¿½e : {0} - {1}
 #error.requestError=Erreur lors de la demande : {0}
 #switch-en=Passer en anglais
-#switch-fr=Passer en français
-#switch-nl=Passer en néerlandais
+#switch-fr=Passer en franï¿½ais
+#switch-nl=Passer en nï¿½erlandais
 #switch-it=Passer en italien
 
