--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,6 +1,6 @@
 switch-en=Cambia in inglese
 switch-fr=Cambia in francese
-switch-hi=Cambia in hindi
+switch-hi=Seleziona
 switch-bn=Cambia in bengalese
 switch-nl=Cambia in olandese
 switch-it=Cambia in italiano
