--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -1,6 +1,6 @@
 switch-en=Omschakelen naar Engels
 switch-fr=Omschakelen naar Frans
-switch-hi=Omschakelen naar Hindi
+switch-hi=Selecteer
 switch-bn=Omschakelen naar Bengaals
 switch-nl=Omschakelen naar Nederlands
 switch-it=Schakelen naar het Italiaans
