Updated json related changes and update language

--- a/src/main/resources/messages_bn.properties
+++ b/src/main/resources/messages_bn.properties
@@ -1,17 +1,14 @@
-switch-en=?????? ??? ????
-switch-fr=????? ??? ????
-switch-hi=?????? ??? ????
-switch-bn=????? ??? ????
-switch-nl=??? ??? ????
-app.currency=?????? ????????? ?????
-label.fromCurrency=???? ??????:
-label.toCurrency=???? ??????:
-label.amount=??????:
-label.date=?????:
-button.convert=???????? ????
-label.result=???????? ?????:
-error.invalidInput=???? ?????? ???? ??? ??? ??? ?????? ?????
-error.invalidConversionRequest=???? ???????? ??????? ????? ????? ????? ?????
-error.currencyNotFound=?????? ?????? ???????
-error.requestFailed=?????? ?????? ??????: {0} - {1}
-error.requestError=?????? ???? ???? ???? ???? ??????: {0}
+switch-en=ইংরেজি তে পরিবর্তন করুন
+switch-fr=ফরাসি তে পরিবর্তন করুন
+switch-hi=হিন্দি নির্বাচন করুন
+switch-bn=বাঙালি তে পরিবর্তন করুন
+switch-nl=ডাচ তে পরিবর্তন করুন
+switch-it=ইটালিয়ান তে পরিবর্তন করুন
+switch-ch=চীনা তে পরিবর্তন করুন
+app.currency=মুদ্রা রূপান্তরক অ্যাপ
+label.language=ভাষা
+label.fromCurrency=প্রারম্ভিক মুদ্রা:
+label.toCurrency=শেষ মুদ্রা:
+label.amount=পরিমাণ:
+label.date=তারিখ:
+button.convert=রূপ
