--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,10 +1,11 @@
-switch-en=Switch to English
-switch-fr=Switch to French
-switch-hi=Select
-switch-bn=Switch to Bangali
-switch-nl=Switch to Dutch
-switch-it=Switch to Italian
-switch-ch=Switch to Cheniease
+switch-en=English
+switch-mh=Marathi
+switch-fr=French
+switch-hi=Hindi
+switch-bn=Bengali
+switch-nl=Dutch
+switch-it=Italian
+switch-ch=Cheniease
 app.currency=Currency Converter App
 label.language=Language
 label.fromCurrency=From Currency:
