--- a/src/main/resources/messages_hi.properties
+++ b/src/main/resources/messages_hi.properties
@@ -1,19 +1,20 @@
-#switch-en=Switch to English
-#switch-fr=Switch to French
-#switch-hi=Switch to Hindi
-#switch-bn=Switch to Bangali
-#switch-nl=Switch to Dutch
-#switch-it=Switch to Italian
-#app.currency=Currency Converter App
-#label.language=Language
-#label.fromCurrency=From Currency:
-#label.toCurrency=To Currency:
-#label.amount=Amount:
-#label.date=Date:
-#button.convert=Convert
-#label.result=Conversion Result:
-#error.invalidInput=Invalid input. Please provide valid values.
-#error.invalidConversionRequest=Invalid conversion request. Please check your input.
-#error.currencyNotFound=Currency not found.
-#error.requestFailed=Request failed: {0} - {1}
-#error.requestError=Error while making the request: {0}
+switch-en=अंग्रेजी में स्विच करें
+switch-fr=फ्रेंच में स्विच करें
+#switch-hi=हिंदी का चयन करें
+switch-bn=बंगाली में स्विच करें
+switch-nl=डच में स्विच करें
+switch-it=इटैलियन में स्विच करें
+switch-ch=चीनी में स्विच करें
+app.currency=मुद्रा परिवर्तक एप
+label.language=भाषा
+label.fromCurrency=से मुद्रा:
+label.toCurrency=को मुद्रा:
+label.amount=राशि:
+label.date=तारीख:
+button.convert=कन्वर्ट करें
+label.result=परिवर्तन परिणाम:
+error.invalidInput=अमान्य इनपुट। कृपया वैध मूल्य प्रदान करें।
+error.invalidConversionRequest=अमान्य परिवर्तन अनुरोध। कृपया अपने इनपुट की जाँच करें।
+error.currencyNotFound=मुद्रा नहीं मिली।
+error.requestFailed=अनुरोध असफल: {0} - {1}
+error.requestError=अनुरोध बनाते समय त्रुटि: {0}
