--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,9 +1,9 @@
-switch-en=Cambia in inglese
-switch-fr=Cambia in francese
+switch-en=inglese
+switch-fr=francese
 switch-hi=Seleziona
-switch-bn=Cambia in bengalese
-switch-nl=Cambia in olandese
-switch-it=Cambia in italiano
+switch-bn=bengalese
+switch-nl=olandese
+switch-it=italiano
 app.currency=App Convertitore di Valuta
 label.language=Lingua
 label.fromCurrency=Da valuta:
