--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -1,8 +1,8 @@
-switch-en=Omschakelen naar Engels
-switch-fr=Omschakelen naar Frans
+switch-en=Engels
+switch-fr=Frans
 switch-hi=Selecteer
-switch-bn=Omschakelen naar Bengaals
-switch-nl=Omschakelen naar Nederlands
+switch-bn=Bengaals
+switch-nl=Nederlands
 switch-it=Schakelen naar het Italiaans
 app.currency=Valutawisselapp
 label.language=Taal
